add new DTOs for address and phone number, refactor old DTOs and use versioning
