# application/bookmark-service/src/main/java/ro/rasel/spring/microservices/bookmarkservice/controller/v1/BookmarkApi.java
@@ -1,4 +1,4 @@
-package ro.rasel.spring.microservices.bookmarkservice.controller;
+package ro.rasel.spring.microservices.bookmarkservice.controller.v1;
 
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
@@ -12,8 +12,8 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
-import ro.rasel.spring.microservices.bookmarkservice.controller.dto.BookmarkDetailsDto;
-import ro.rasel.spring.microservices.bookmarkservice.controller.dto.BookmarkDto;
+import ro.rasel.spring.microservices.bookmarkservice.controller.v1.dto.BookmarkRequest;
+import ro.rasel.spring.microservices.bookmarkservice.controller.v1.dto.BookmarkResponse;
 
 import javax.validation.Valid;
 import java.util.Collection;
@@ -31,7 +31,7 @@ public interface BookmarkApi {
             @ApiResponse(code = 200, message = "Ok"),
             @ApiResponse(code = 404, message = "Not found"),
             @ApiResponse(code = 500, message = "Internal server error")})
-    ResponseEntity<Collection<BookmarkDto>> getBookmarks(@PathVariable String userId);
+    ResponseEntity<Collection<BookmarkResponse>> getBookmarks(@PathVariable String userId);
 
     @GetMapping("/{bookmarkId}")
     @ApiOperation(value = "get bookmark", notes = "Get a bookmark", tags = TAG)
@@ -40,7 +40,7 @@ public interface BookmarkApi {
             @ApiResponse(code = 400, message = "Bad request"),
             @ApiResponse(code = 404, message = "Not found"),
             @ApiResponse(code = 500, message = "Internal server error")})
-    ResponseEntity<BookmarkDto> getBookmark(@PathVariable String userId, @PathVariable long bookmarkId);
+    ResponseEntity<BookmarkResponse> getBookmark(@PathVariable String userId, @PathVariable long bookmarkId);
 
     @PostMapping(produces = APPLICATION_JSON_VALUE, consumes = APPLICATION_JSON_VALUE)
     @ApiOperation(value = "add bookmark", notes = "Create a new bookmark and return it", tags = TAG)
@@ -48,7 +48,7 @@ public interface BookmarkApi {
             @ApiResponse(code = 200, message = "Ok"),
             @ApiResponse(code = 400, message = "Bad request"),
             @ApiResponse(code = 500, message = "Internal server error")})
-    BookmarkDto createBookmark(@PathVariable String userId, @Valid @RequestBody BookmarkDetailsDto bookmarkDetailsDto);
+    BookmarkResponse createBookmark(@PathVariable String userId, @Valid @RequestBody BookmarkRequest bookmarkRequest);
 
     @PutMapping(value = "/{bookmarkId}", produces = APPLICATION_JSON_VALUE, consumes = APPLICATION_JSON_VALUE)
     @ApiOperation(value = "add bookmark", notes = "Update a bookmark and return it", tags = TAG)
@@ -57,9 +57,9 @@ public interface BookmarkApi {
             @ApiResponse(code = 400, message = "Bad request"),
             @ApiResponse(code = 404, message = "Not Found"),
             @ApiResponse(code = 500, message = "Internal server error")})
-    ResponseEntity<BookmarkDto> updateBookmark(
+    ResponseEntity<BookmarkResponse> updateBookmark(
             @PathVariable String userId, @PathVariable long bookmarkId,
-            @Valid @RequestBody BookmarkDetailsDto bookmarkDetailsDto);
+            @Valid @RequestBody BookmarkRequest bookmarkRequest);
 
     @DeleteMapping(value = "/{bookmarkId}")
     @ApiOperation(code = 201, value = "delete bookmarks", notes = "Delete a bookmark", tags = TAG)
