# application/passport-service/swagger/bookmark-service-swagger.json
@@ -1,296 +1,243 @@
 {
-  "swagger": "2.0",
-  "info": {
-    "description": "Basic resource service used for exposing data from database",
-    "version": "0.0.1-SNAPSHOT",
-    "title": "bookmark-service"
+  "swagger" : "2.0",
+  "info" : {
+    "description" : "Basic resource service used for exposing data from database",
+    "version" : "0.0.1-SNAPSHOT",
+    "title" : "bookmark-service"
   },
-  "tags": [
-    {
-      "name": "bookmark"
-    }
-  ],
-  "schemes": [
-    "https"
-  ],
-  "paths": {
-    "/v1/users/{userId}/bookmarks": {
-      "get": {
-        "tags": [
-          "bookmark"
-        ],
-        "summary": "get bookmarks",
-        "description": "Get a list of bookmarks",
-        "operationId": "getBookmarks",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "userId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Ok",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/Bookmark"
+  "tags" : [ {
+    "name" : "bookmark"
+  } ],
+  "schemes" : [ "https" ],
+  "paths" : {
+    "/v1/users/{userId}/bookmarks" : {
+      "get" : {
+        "tags" : [ "bookmark" ],
+        "summary" : "get bookmarks",
+        "description" : "Get a list of bookmarks",
+        "operationId" : "getBookmarks",
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "userId",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Ok",
+            "schema" : {
+              "type" : "array",
+              "items" : {
+                "$ref" : "#/definitions/BookmarkResponse"
               }
             }
           },
-          "404": {
-            "description": "Not found"
+          "404" : {
+            "description" : "Not found"
           },
-          "500": {
-            "description": "Internal server error"
+          "500" : {
+            "description" : "Internal server error"
           }
         }
       },
-      "post": {
-        "tags": [
-          "bookmark"
-        ],
-        "summary": "add bookmark",
-        "description": "Create a new bookmark and return it",
-        "operationId": "createBookmark",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "userId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "in": "body",
-            "name": "body",
-            "required": false,
-            "schema": {
-              "$ref": "#/definitions/BookmarkDetails"
-            }
+      "post" : {
+        "tags" : [ "bookmark" ],
+        "summary" : "add bookmark",
+        "description" : "Create a new bookmark and return it",
+        "operationId" : "createBookmark",
+        "consumes" : [ "application/json" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "userId",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/BookmarkRequest"
           }
-        ],
-        "responses": {
-          "200": {
-            "description": "Ok",
-            "schema": {
-              "$ref": "#/definitions/Bookmark"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Ok",
+            "schema" : {
+              "$ref" : "#/definitions/BookmarkResponse"
             }
           },
-          "400": {
-            "description": "Bad request"
+          "400" : {
+            "description" : "Bad request"
           },
-          "500": {
-            "description": "Internal server error"
+          "500" : {
+            "description" : "Internal server error"
           }
         }
       }
     },
-    "/v1/users/{userId}/bookmarks/{bookmarkId}": {
-      "get": {
-        "tags": [
-          "bookmark"
-        ],
-        "summary": "get bookmark",
-        "description": "Get a bookmark",
-        "operationId": "getBookmark",
-        "parameters": [
-          {
-            "name": "userId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "bookmarkId",
-            "in": "path",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Ok",
-            "schema": {
-              "$ref": "#/definitions/Bookmark"
+    "/v1/users/{userId}/bookmarks/{bookmarkId}" : {
+      "get" : {
+        "tags" : [ "bookmark" ],
+        "summary" : "get bookmark",
+        "description" : "Get a bookmark",
+        "operationId" : "getBookmark",
+        "parameters" : [ {
+          "name" : "userId",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "bookmarkId",
+          "in" : "path",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Ok",
+            "schema" : {
+              "$ref" : "#/definitions/BookmarkResponse"
             }
           },
-          "400": {
-            "description": "Bad request"
+          "400" : {
+            "description" : "Bad request"
           },
-          "404": {
-            "description": "Not found"
+          "404" : {
+            "description" : "Not found"
           },
-          "500": {
-            "description": "Internal server error"
+          "500" : {
+            "description" : "Internal server error"
           }
         }
       },
-      "put": {
-        "tags": [
-          "bookmark"
-        ],
-        "summary": "add bookmark",
-        "description": "Update a bookmark and return it",
-        "operationId": "updateBookmark",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "userId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "bookmarkId",
-            "in": "path",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
-          },
-          {
-            "in": "body",
-            "name": "body",
-            "required": false,
-            "schema": {
-              "$ref": "#/definitions/BookmarkDetails"
-            }
+      "put" : {
+        "tags" : [ "bookmark" ],
+        "summary" : "add bookmark",
+        "description" : "Update a bookmark and return it",
+        "operationId" : "updateBookmark",
+        "consumes" : [ "application/json" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "userId",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "bookmarkId",
+          "in" : "path",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        }, {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/BookmarkRequest"
           }
-        ],
-        "responses": {
-          "200": {
-            "description": "Ok",
-            "schema": {
-              "$ref": "#/definitions/Bookmark"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Ok",
+            "schema" : {
+              "$ref" : "#/definitions/BookmarkResponse"
             }
           },
-          "400": {
-            "description": "Bad request"
+          "400" : {
+            "description" : "Bad request"
           },
-          "404": {
-            "description": "Not Found"
+          "404" : {
+            "description" : "Not Found"
           },
-          "500": {
-            "description": "Internal server error"
+          "500" : {
+            "description" : "Internal server error"
           }
         }
       },
-      "delete": {
-        "tags": [
-          "bookmark"
-        ],
-        "summary": "delete bookmarks",
-        "description": "Delete a bookmark",
-        "operationId": "deleteBookmark",
-        "parameters": [
-          {
-            "name": "userId",
-            "in": "path",
-            "required": true,
-            "type": "string"
+      "delete" : {
+        "tags" : [ "bookmark" ],
+        "summary" : "delete bookmarks",
+        "description" : "Delete a bookmark",
+        "operationId" : "deleteBookmark",
+        "parameters" : [ {
+          "name" : "userId",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "bookmarkId",
+          "in" : "path",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        } ],
+        "responses" : {
+          "201" : {
+            "description" : "No content"
           },
-          {
-            "name": "bookmarkId",
-            "in": "path",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "No content"
+          "400" : {
+            "description" : "Bad request"
           },
-          "400": {
-            "description": "Bad request"
+          "404" : {
+            "description" : "Not found"
           },
-          "404": {
-            "description": "Not found"
-          },
-          "500": {
-            "description": "Internal server error"
+          "500" : {
+            "description" : "Internal server error"
           }
         }
       }
     }
   },
-  "definitions": {
-    "Bookmark": {
-      "type": "object",
-      "required": [
-        "description",
-        "href",
-        "label"
-      ],
-      "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int64",
-          "description": "Bookmark id"
+  "definitions" : {
+    "BookmarkRequest" : {
+      "type" : "object",
+      "required" : [ "description", "href", "label" ],
+      "properties" : {
+        "href" : {
+          "type" : "string",
+          "description" : "Bookmark href"
         },
-        "userId": {
-          "type": "string",
-          "description": "Used id"
+        "description" : {
+          "type" : "string",
+          "description" : "Bookmark description"
         },
-        "href": {
-          "type": "string",
-          "description": "Bookmark href"
-        },
-        "description": {
-          "type": "string",
-          "description": "Bookmark description"
-        },
-        "label": {
-          "type": "string",
-          "description": "Bookmark label"
-        },
-        "bookmark": {
-          "$ref": "#/definitions/Bookmark"
+        "label" : {
+          "type" : "string",
+          "description" : "Bookmark label"
         }
       },
-      "description": "User Bookmark"
+      "description" : "User Bookmark"
     },
-    "BookmarkDetails": {
-      "type": "object",
-      "required": [
-        "description",
-        "href",
-        "label"
-      ],
-      "properties": {
-        "href": {
-          "type": "string",
-          "description": "Bookmark href"
+    "BookmarkResponse" : {
+      "type" : "object",
+      "required" : [ "description", "href", "label" ],
+      "properties" : {
+        "id" : {
+          "type" : "integer",
+          "format" : "int64",
+          "description" : "Bookmark id"
         },
-        "description": {
-          "type": "string",
-          "description": "Bookmark description"
+        "userId" : {
+          "type" : "string",
+          "description" : "Used id"
         },
-        "label": {
-          "type": "string",
-          "description": "Bookmark label"
+        "href" : {
+          "type" : "string",
+          "description" : "Bookmark href"
         },
-        "bookmark": {
-          "$ref": "#/definitions/Bookmark"
+        "description" : {
+          "type" : "string",
+          "description" : "Bookmark description"
+        },
+        "label" : {
+          "type" : "string",
+          "description" : "Bookmark label"
         }
       },
-      "description": "User Bookmark"
+      "description" : "User Bookmark Response"
     }
   }
 }
